--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,13 +1,15 @@
 {
   "display_name": "Perl, Test::Simple",
-  "image_name": "cyberdojofoundation/perl_test_simple",
-  "visible_filenames":
-  [
+  "image_name": "cyberdojofoundation/perl_test_simple:575b060",
+  "visible_filenames": [
     "hiker.t",
     "hiker.pl",
     "cyber-dojo.sh"
   ],
-  "filename_extension": [ ".pl", ".t" ],
+  "filename_extension": [
+    ".pl",
+    ".t"
+  ],
   "max_seconds": 10,
   "tab_size": 4
 }
